crates/ty_python_types/resources/mdtest/snapshots/semantic_syntax_erro…_-_Semantic_syntax_erro…_-_`async`_comprehensio…_-_Python_3.10_(96aa8ec77d46553d).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: semantic_syntax_errors.md - Semantic syntax error diagnostics - `async` comprehensions in synchronous comprehensions - Python 3.10
mdtest path: crates/ty_python_types/resources/mdtest/diagnostics/semantic_syntax_errors.md
---

# Python source files

## mdtest_snippet.py

```
 1 | async def elements(n):
 2 |     yield n
 3 | 
 4 | async def f():
 5 |     # error: 19 [invalid-syntax] "cannot use an asynchronous comprehension inside of a synchronous comprehension on Python 3.10 (syntax was added in 3.11)"
 6 |     return {n: [x async for x in elements(n)] for n in range(3)}
 7 | async def test():
 8 |     # error: [not-iterable] "Object of type `range` is not async-iterable"
 9 |     return [[x async for x in elements(n)] async for n in range(3)]
10 | async def f():
11 |     [x for x in [1]] and [x async for x in elements(1)]
12 | 
13 | async def f():
14 |     def g():
15 |         pass
16 |     [x async for x in elements(1)]
```

# Diagnostics

```
error[invalid-syntax]: cannot use an asynchronous comprehension inside of a synchronous comprehension on Python 3.10 (syntax was added in 3.11)
 --> src/mdtest_snippet.py:6:19
  |
4 | async def f():
5 |     # error: 19 [invalid-syntax] "cannot use an asynchronous comprehension inside of a synchronous comprehension on Python 3.10 (syntax…
6 |     return {n: [x async for x in elements(n)] for n in range(3)}
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
7 | async def test():
8 |     # error: [not-iterable] "Object of type `range` is not async-iterable"
  |

```

```
error[not-iterable]: Object of type `range` is not async-iterable
  --> src/mdtest_snippet.py:9:59
   |
 7 | async def test():
 8 |     # error: [not-iterable] "Object of type `range` is not async-iterable"
 9 |     return [[x async for x in elements(n)] async for n in range(3)]
   |                                                           ^^^^^^^^
10 | async def f():
11 |     [x for x in [1]] and [x async for x in elements(1)]
   |
info: It has no `__aiter__` method
info: rule `not-iterable` is enabled by default

```
