crates/ty_python_types/resources/mdtest/snapshots/shadowing.md_-_Shadowing_-_Implicit_class_shado…_(c8ff9e3a079e8bd5).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: shadowing.md - Shadowing - Implicit class shadowing
mdtest path: crates/ty_python_types/resources/mdtest/diagnostics/shadowing.md
---

# Python source files

## mdtest_snippet.py

```
1 | class C: ...
2 | 
3 | C = 1  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Implicit shadowing of class `C`
 --> src/mdtest_snippet.py:3:1
  |
1 | class C: ...
2 |
3 | C = 1  # error: [invalid-assignment]
  | -   ^ Incompatible value of type `Literal[1]`
  | |
  | Declared type `<class 'C'>`
  |
info: Annotate to make it explicit if this is intentional
info: rule `invalid-assignment` is enabled by default

```
