crates/ty_python_types/resources/mdtest/snapshots/single_matching_over…_-_Single_matching_over…_-_Limited_number_of_ov…_(93e9a157fdca3ab2).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: single_matching_overload.md - Single matching overload - Limited number of overloads
mdtest path: crates/ty_python_types/resources/mdtest/diagnostics/single_matching_overload.md
---

# Python source files

## overloaded.pyi

```
1 | from typing import overload
2 | 
3 | @overload
4 | def f() -> None: ...
5 | @overload
6 | def f(x: int) -> int: ...
7 | @overload
8 | def f(x: int, y: int) -> int: ...
```

## mdtest_snippet.py

```
1 | from overloaded import f
2 | 
3 | f("a")  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `f` is incorrect
 --> src/mdtest_snippet.py:3:3
  |
1 | from overloaded import f
2 |
3 | f("a")  # error: [invalid-argument-type]
  |   ^^^ Expected `int`, found `Literal["a"]`
  |
info: Matching overload defined here
 --> src/overloaded.pyi:6:5
  |
4 | def f() -> None: ...
5 | @overload
6 | def f(x: int) -> int: ...
  |     ^ ------ Parameter declared here
7 | @overload
8 | def f(x: int, y: int) -> int: ...
  |
info: Non-matching overloads for function `f`:
info:   () -> None
info:   (x: int, y: int) -> int
info: rule `invalid-argument-type` is enabled by default

```
